--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ hs_err_pid*
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -50,3 +51,5 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+/2DGameTutorial/nbproject/private/
+/2DGameTutorial/build/
